--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.messages.basename=messages
+spring.datasource.url=jdbc:mysql://localhost:33060/RestFullServicesParkingCar
+spring.datasource.username=root
+spring.datasource.password=root
