--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.messages.basename=messages
-spring.datasource.url=jdbc:mysql://localhost:33060/RestFullServicesParkingCar
+spring.datasource.url=jdbc:mysql://localhost:33060/parkingcar
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
+spring.jpa.show-sql=true
